--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -63,6 +62,6 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     <!-- Entry point script -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
